--- a/desaprender.html
+++ b/desaprender.html
@@ -53,7 +53,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">website creation software</a></section><section class="header3 cid-r7qnNRUAeB mbr-parallax-background" id="header3-1o">
+<section class="engine"><a href="https://mobirise.info/d">web maker</a></section><section class="header3 cid-r7qnNRUAeB mbr-parallax-background" id="header3-1o">
 
     
 
@@ -73,7 +73,7 @@
 <br>una búsqueda hacia el interior de nuestra educación</p>
                 </div>
                 <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="desaprender.html#content4-2f">SABER MÁS</a>
-                    <a class="btn btn-md btn-white-outline display-4" href="https://docs.google.com/forms/d/e/1FAIpQLSefhzT1nX2HmaG1NmnyjVEtibyWpoG_dwtehJiJ1dfS3RsSFQ/viewform?usp=sf_link" target="_blank">INSCRIBIRME</a></div>
+                    <a class="btn btn-md btn-white-outline display-4" href="desaprender.html#info1-1w" target="_blank">INSCRIBIRME</a></div>
             </div>
         </div>
     </div>
@@ -178,15 +178,15 @@
                         Agenda</h2>
                 </div>
                 <div class="clearfix"></div>
-                <div id="bootstrap-accordion_35" class="panel-group accordionStyles accordion" role="tablist" aria-multiselectable="true">
+                <div id="bootstrap-accordion_7" class="panel-group accordionStyles accordion" role="tablist" aria-multiselectable="true">
                     <div class="card">
                         <div class="card-header" role="tab" id="headingOne">
-                            <a role="button" class="panel-title collapsed text-black" data-toggle="collapse" data-core="" href="#collapse1_35" aria-expanded="false" aria-controls="collapse1">
+                            <a role="button" class="panel-title collapsed text-black" data-toggle="collapse" data-core="" href="#collapse1_7" aria-expanded="false" aria-controls="collapse1">
                                 <h4 class="mbr-fonts-style display-5">
                                     <span class="sign mbr-iconfont mbri-arrow-down inactive"></span>&nbsp;Viernes: ¿Quién soy?</h4>
                             </a>
                         </div>
-                        <div id="collapse1_35" class="panel-collapse noScroll collapse " role="tabpanel" aria-labelledby="headingOne" data-parent="#bootstrap-accordion_35">
+                        <div id="collapse1_7" class="panel-collapse noScroll collapse " role="tabpanel" aria-labelledby="headingOne" data-parent="#bootstrap-accordion_7">
                             <div class="panel-body p-4">
                                 <p class="mbr-fonts-style panel-text display-7">17:00 Hs
 <br>Llegada: Dinámica de presentación, desde el juego. 
@@ -199,14 +199,14 @@
                     </div>
                     <div class="card">
                         <div class="card-header" role="tab" id="headingTwo">
-                            <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse2_35" aria-expanded="false" aria-controls="collapse2">
+                            <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse2_7" aria-expanded="false" aria-controls="collapse2">
                                 <h4 class="mbr-fonts-style display-5">
                                     <span class="sign mbr-iconfont mbri-arrow-down inactive"></span>&nbsp;Sábado: ¿Qué hicieron conmigo?
 <div><br></div></h4>
                             </a>
                             
                         </div>
-                        <div id="collapse2_35" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo" data-parent="#bootstrap-accordion_35">
+                        <div id="collapse2_7" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo" data-parent="#bootstrap-accordion_7">
                             <div class="panel-body p-4">
                                 <p class="mbr-fonts-style panel-text display-7">8:30 Hs 
 <br>Desayuno
@@ -233,13 +233,13 @@
                     </div>
                     <div class="card">
                         <div class="card-header" role="tab" id="headingThree">
-                            <a role="button" class="collapsed text-black panel-title" data-toggle="collapse" data-core="" href="#collapse3_35" aria-expanded="false" aria-controls="collapse3">
+                            <a role="button" class="collapsed text-black panel-title" data-toggle="collapse" data-core="" href="#collapse3_7" aria-expanded="false" aria-controls="collapse3">
                                 <h4 class="mbr-fonts-style display-5">
                                     <span class="sign mbr-iconfont mbri-arrow-down inactive"></span>&nbsp;Domingo: ¿Qué hago yo con lxs demás?
 </h4>
                             </a>
                         </div>
-                        <div id="collapse3_35" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree" data-parent="#bootstrap-accordion_35">
+                        <div id="collapse3_7" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree" data-parent="#bootstrap-accordion_7">
                             <div class="panel-body p-4">
                                 <p class="mbr-fonts-style panel-text display-7">8:30 Hs 
 <br>Meditación Activa
@@ -293,7 +293,7 @@
                 <h2 class="align-left mbr-bold mbr-fonts-style display-7"><span style="font-weight: normal;">El taller se realizará del 30 de Noviembre al 2 de Diciembre.<br><br></span><span style="font-weight: normal;">La propuesta es un encuentro de Viernes a Domingo, en El Campito Azul, Sierra de los Padres.</span><br><span style="font-weight: normal;"><br></span>El taller incluye <span style="color: inherit; font-size: 1.4rem; font-weight: normal;">2 Noches de alojamiento en el Hostal El Campito Azul,&nbsp;</span><span style="color: inherit; font-size: 1.4rem; font-weight: normal;">4 comidas, desayunos y meriendas.</span><div><br></div></h2>
             </div>
             <div class="media-container-column col-12 col-lg-3 col-md-4">
-                <div class="mbr-section-btn align-right py-4"><a class="btn btn-primary display-4" href="https://docs.google.com/forms/d/e/1FAIpQLSefhzT1nX2HmaG1NmnyjVEtibyWpoG_dwtehJiJ1dfS3RsSFQ/viewform?usp=sf_link" target="_blank">INSCRIBETE AHORA</a></div>
+                <div class="mbr-section-btn align-right py-4"><a class="btn btn-primary display-4" href="page3.html" target="_blank">VER COSTOS E INSCRIPCION</a></div>
             </div>
         </div>
     </div>
