--- a/page2.html
+++ b/page2.html
@@ -52,7 +52,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">free responsive website templates</a></section><section class="mbr-section content4 cid-r7qFN8rQj1" id="content4-2p">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><section class="mbr-section content4 cid-r7qFN8rQj1" id="content4-2p">
 
     
 
