--- a/desaprender.html
+++ b/desaprender.html
@@ -45,7 +45,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="index.html#timeline1-m">Actividades</a>
+                    <a class="nav-link link text-white display-4" href="index.html">Actividades</a>
                 </li><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#form1-z">
                         Contacto</a></li></ul>
             
@@ -53,7 +53,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">web maker</a></section><section class="header3 cid-r7qnNRUAeB mbr-parallax-background" id="header3-1o">
+<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="header3 cid-r7qnNRUAeB mbr-parallax-background" id="header3-1o">
 
     
 
@@ -293,7 +293,7 @@
                 <h2 class="align-left mbr-bold mbr-fonts-style display-7"><span style="font-weight: normal;">El taller se realizará del 30 de Noviembre al 2 de Diciembre.<br><br></span><span style="font-weight: normal;">La propuesta es un encuentro de Viernes a Domingo, en El Campito Azul, Sierra de los Padres.</span><br><span style="font-weight: normal;"><br></span>El taller incluye <span style="color: inherit; font-size: 1.4rem; font-weight: normal;">2 Noches de alojamiento en el Hostal El Campito Azul,&nbsp;</span><span style="color: inherit; font-size: 1.4rem; font-weight: normal;">4 comidas, desayunos y meriendas.</span><div><br></div></h2>
             </div>
             <div class="media-container-column col-12 col-lg-3 col-md-4">
-                <div class="mbr-section-btn align-right py-4"><a class="btn btn-primary display-4" href="page3.html" target="_blank">VER COSTOS E INSCRIPCION</a></div>
+                <div class="mbr-section-btn align-right py-4"><a class="btn btn-primary display-4" href="desaprender-inscripcion.html" target="_blank">VER COSTOS E INSCRIPCION</a></div>
             </div>
         </div>
     </div>
