Actualización Taller Desapender

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">free responsive web templates</a></section><section class="header7 cid-r6osCpltVT mbr-parallax-background" id="header7-1j">
+<section class="engine"><a href="https://mobirise.info/t">amp template</a></section><section class="header7 cid-r6osCpltVT mbr-parallax-background" id="header7-1j">
 
     
 
@@ -178,7 +178,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Gracias!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Ak++m4/BjmTGv3fek885a1f5znRrHav+Wmt1jNU8VVfmo5MCynguaO3au5XFsgDbKG8kq25ZgVA28WaGoCcFlQMW2alrkGgM7RArMHCnVdeS6x6bcsQRrgx+zZ3SWHkS">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="D0umn7htMzzRLDFeKhnT+Q1KNXG/ulIYvq3DgU4rQ9h0h2PsEWXSvQTG+Y8BQhRQVaA4hfGHn3F/8EFvoZ65tNW1FjdvsSi6ClflMdXkPfMfq8AMmvl/6pwgytsJZ5mB">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
