--- a/quienes.html
+++ b/quienes.html
@@ -52,7 +52,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap html templates</a></section><section class="mbr-section content4 cid-r7qFN8rQj1" id="content4-2p">
+<section class="engine"><a href="https://mobirise.info/o">free portfolio website templates</a></section><section class="mbr-section content4 cid-r7qFN8rQj1" id="content4-2p">
 
     
 
@@ -147,7 +147,7 @@
     <div class="container">
         <div class="media-container-row">
             <div class="mbr-text col-12 col-md-8 mbr-fonts-style display-7">
-                <blockquote><p> <strong>Lo que traigo al taller</strong></p><p>Las imagenes grabadas en mi retina, y en mis recorridos experienciales, de haber transitado muchos, realmente muchos proyectos de educación alternativa en más lugares de los que podría tratar de contar; mi experiencia como papá, que es lo más importante y valioso dentro de los aprendizajes en mi vida; mi transito como referente en el mundo de las educaciones alternativas, y la deconstrucción de los lugares comunes que vengo intentando (des)reproducir; mi pasión por crear nuevos horizontes de posibilidades; un montón de no-certezas sobre la practica político pedagógica en los espacios educativos.
+                <blockquote><p> <strong>Lo que traigo al taller</strong></p><p>Las imagenes grabadas en mi retina, y en mis recorridos experienciales, de haber transitado muchos, realmente muchos proyectos de educación alternativa en más lugares de los que podría tratar de contar; mi experiencia como papá, que es lo más importante y valioso dentro de los aprendizajes en mi vida; mi tránsito como referente en el mundo de las educaciones alternativas, y la deconstrucción de los lugares comunes que vengo intentando (de)construir; mi pasión por crear nuevos horizontes de posibilidades; un montón de no-certezas sobre la practica político pedagógica en los espacios educativos.
 </p></blockquote>
             </div>
         </div>
