Nuevo Video Desaprender

--- a/desaprender-inscripcion.html
+++ b/desaprender-inscripcion.html
@@ -52,7 +52,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">website maker</a></section><section class="header3 cid-r7TvRGX9xJ mbr-parallax-background" id="header3-2s">
+<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section class="header3 cid-r7TvRGX9xJ mbr-parallax-background" id="header3-2s">
 
     
 
@@ -90,7 +90,7 @@
                 <h2 class="align-left mbr-bold mbr-fonts-style display-7"><span style="font-weight: normal;">El taller se realizará del 30 de Noviembre al 2 de Diciembre.<br><br></span><span style="font-weight: normal;">La propuesta es un encuentro de Viernes a Domingo, en El Campito Azul, Sierra de los Padres.</span><br><span style="font-weight: normal;"><br></span>El taller incluye&nbsp;<span style="color: inherit; font-size: 1.4rem; font-weight: normal;">2 Noches de alojamiento en el Hostal El Campito Azul (Camping o Hostel),&nbsp;</span><span style="color: inherit; font-size: 1.4rem; font-weight: normal;">4 comidas, desayunos y meriendas.</span><div><br></div></h2>
             </div>
             <div class="media-container-column col-12 col-lg-3 col-md-4">
-                <div class="mbr-section-btn align-right py-4"><a class="btn btn-primary display-4" href="https://docs.google.com/forms/d/e/1FAIpQLSefhzT1nX2HmaG1NmnyjVEtibyWpoG_dwtehJiJ1dfS3RsSFQ/viewform?usp=sf_link" target="_blank">INSCRIBETE AHORA</a></div>
+                <div class="mbr-section-btn align-right py-4"><a class="btn btn-primary display-4" href="https://docs.google.com/forms/d/e/1FAIpQLSdt_wrH-z0EGLr3AAiW3J0BGWjzRRnRlwVrrmG0XXkouCDZDg/viewform?usp=sf_link" target="_blank">INSCRIBETE AHORA</a></div>
             </div>
         </div>
     </div>
@@ -122,7 +122,7 @@
                             <li class="list-group-item"><span style="font-size: 1.4rem;">Incluye todos los desayunos, almuerzos, meriendas y cenas.</span></li><br><li class="list-group-item"><span style="font-size: 1.4rem;">Opciones de alojamiento en camping y hostel<br></span><br></li>
                         </ul>
                     </div>
-                    <div class="mbr-section-btn text-center pt-4"><a href="https://docs.google.com/forms/d/e/1FAIpQLSefhzT1nX2HmaG1NmnyjVEtibyWpoG_dwtehJiJ1dfS3RsSFQ/viewform?usp=sf_link" class="btn btn-primary display-4" target="_blank">INSCRIBIRME</a></div>
+                    <div class="mbr-section-btn text-center pt-4"><a href="https://docs.google.com/forms/d/e/1FAIpQLSdt_wrH-z0EGLr3AAiW3J0BGWjzRRnRlwVrrmG0XXkouCDZDg/viewform?usp=sf_link" class="btn btn-primary display-4" target="_blank">INSCRIBIRME</a></div>
                 </div>
             </div>
 
