--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="header7 cid-r6osCpltVT mbr-parallax-background" id="header7-1j">
+<section class="engine"><a href="https://mobirise.info/b">create a website</a></section><section class="header7 cid-r6osCpltVT mbr-parallax-background" id="header7-1j">
 
     
 
@@ -63,15 +63,16 @@
         <div class="media-container-row">
 
             <div class="media-content align-right">
-                <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-1">Nuevo Curso Online</h1>
+                <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-1">Taller Vivencial en Mar del Plata</h1>
                 <div class="mbr-section-text mbr-white pb-3">
-                    <p class="mbr-text mbr-fonts-style display-5">
-                        El primer curso online para conocer la diversidad de las educaciones alternativas, desde una perspectiva crítica, integral y transformadora.</p>
+                    <p class="mbr-text mbr-fonts-style display-5">30 de Noviembre al 2 de Diciembre - Mar del Plata
+<br>1 encuentro - 3 días - 25 personas 
+<br>una búsqueda hacia el interior de nuestra educación</p>
                 </div>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="http://desaprenderonline.com/curso/">SABER MÁS</a></div>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="desaprender.html">SABER MÁS</a></div>
             </div>
 
-            <div class="mbr-figure" style="width: 100%;"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/2rKa4Xl2mD4?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+            <div class="mbr-figure" style="width: 100%;"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/ox-S7S2pI_g?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
 
         </div>
     </div>
@@ -178,7 +179,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Gracias!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="SuDyJG8xoxvWpYxK93kXvu1dW58nG5ubEQzF5s7bQ+8y+Uni4mAXanoYAb9di5R9XWR+TMXPCayY/zl8CpCvfs3pBGPqlCKWlBQk9zY+lcSMbKl6/7rjbYAwZqT45qHu">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="2mBCEjvg8W6VSaUmsclS6763/9sqnzOAWWIzE2bmVvuxGrjjYCZ4cYyE+CaSUny0CdiM0esQ90Jxi42a4pky0lEB7fyHF96fOgYKRVfOIupBieYWvCAK4mFTJGAfLaWk">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
