--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="header3 cid-r9pBPk0gXJ mbr-parallax-background" id="header3-30">
+<section class="engine"><a href="https://mobirise.info/n">simple web templates</a></section><section class="header3 cid-r9pBPk0gXJ mbr-parallax-background" id="header3-30">
 
     
 
@@ -138,11 +138,11 @@
                         <img src="assets/images/grupo-1-676x332.png" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
-                        <h4 class="card-title mbr-fonts-style display-7"><strong>Introducción a la Educación Alternativa</strong><br>15 de Diciembre - Santiago de Chile</h4>
+                        <h4 class="card-title mbr-fonts-style display-7"><strong>Introducción a la Educación Alternativa</strong><br>19 y 20 de Enero - Santiago de Chile</h4>
                         <p class="mbr-text mbr-fonts-style display-7">Un taller intensivo de 2 jornadas que nos invita recorrer la diversidad de experiencias educativas alternativas, conociendo sus diferencias, matices, elementos comunes y contradicciones.</p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="index.html" class="btn btn-primary-outline display-4">
-                            PROXIMAMENTE</a></div>
+                    <div class="mbr-section-btn text-center"><a href="index.html" class="btn btn-primary display-4">
+                            MÁS INFORMACIÓN</a></div>
                 </div>
             </div>
 
@@ -180,7 +180,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Gracias!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="mhgrFW4QPotuJGCJBVVjhiHWKEuE5/3+5mGW2zZqFt0wYfgJU/JcZXGEH8nR2O3tquYHrXLmY+26MP68g3wNvuSp7P60u95+W70Gv3wNnmB//ZvcYjeqa6NTbT/EPZAb">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ArNdbyFJsbbGqQnhppDLiW2w+TZXz1GDW7qXgkRC3J1SOSmXYQnwVFjq+BgLIIQR3xiYn5ciia7JZ420+EoFFbzMRPb+rly/CZqvCJ5Rjc43QvuLexxD0uca5xrFhkTB">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
