--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">free portfolio web templates</a></section><section class="header3 cid-r9pBPk0gXJ mbr-parallax-background" id="header3-30">
+<section class="engine"><a href="https://mobirise.info/h">create your own web page for free</a></section><section class="header3 cid-r9pBPk0gXJ mbr-parallax-background" id="header3-30">
 
     
 
@@ -141,7 +141,7 @@
                         <h4 class="card-title mbr-fonts-style display-7"><strong>Introducción a la Educación Alternativa</strong><br>19 y 20 de Enero - Santiago de Chile</h4>
                         <p class="mbr-text mbr-fonts-style display-7">Un taller intensivo de 2 jornadas que nos invita recorrer la diversidad de experiencias educativas alternativas, conociendo sus diferencias, matices, elementos comunes y contradicciones.</p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="index.html" class="btn btn-primary display-4">
+                    <div class="mbr-section-btn text-center"><a href="page4.html" class="btn btn-primary display-4">
                             MÁS INFORMACIÓN</a></div>
                 </div>
             </div>
@@ -180,7 +180,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Gracias!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="wHsSCH/kfQ06sOGt/L9clGjdsyTNfDti7WRE9scH/ngVy/ayS2KVEyL5OOKFmex8KOC3Ha2cl6p8oe70YboEUqZdFPYls/AFvEp6sXcZbGFgyT4d+7jCPq3WKpSe96Fr">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="smo7WwsGKyyo0FZrYsCoHO//9ZdDnvZ8PDQTcJcrPuCmGKOpbMboiDUmOqF/OqMK9Abvf93YPkz8QZ87ppR+UNDvFJb3g/32ww25kwvbUEgK+s/xV/RR+FQlBR9iHl4O">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
