--- a/page4.html
+++ b/page4.html
@@ -53,7 +53,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="header3 cid-rbdbG9tMVC mbr-parallax-background" id="header3-32">
+<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section class="header3 cid-rbdbG9tMVC mbr-parallax-background" id="header3-32">
 
     
 
@@ -334,7 +334,7 @@
                 <h2 class="align-left mbr-bold mbr-fonts-style display-7"><span style="font-weight: normal;">El taller se realizará el Sábado 19 y Domingo 20 de Enero de 2019.<br><br></span><span style="font-weight: normal;">La propuesta es un encuentro de 9 a 17hs en el Colegio Quillahua, Conchali, Región Metropolitana de Santiago de Chile.</span><br><div><br></div></h2>
             </div>
             <div class="media-container-column col-12 col-lg-3 col-md-4">
-                <div class="mbr-section-btn align-right py-4"><a class="btn btn-primary display-4" href="desaprender-inscripcion.html" target="_blank">VER COSTOS E INSCRIPCION</a></div>
+                <div class="mbr-section-btn align-right py-4"><a class="btn btn-primary display-4" href="https://docs.google.com/forms/d/e/1FAIpQLSdiBGkpKhOdEQ3T8PyD6dAGXUqPzNL4vD5SZTxLwOaX-GmIzg/viewform?usp=sf_link" target="_blank">VER COSTOS E INSCRIPCION</a></div>
             </div>
         </div>
     </div>
