cambios menores chile

--- a/desaprender-inscripcion.html
+++ b/desaprender-inscripcion.html
@@ -52,7 +52,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">website templates free download</a></section><section class="header3 cid-r7TvRGX9xJ mbr-parallax-background" id="header3-2s">
+<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="header3 cid-r7TvRGX9xJ mbr-parallax-background" id="header3-2s">
 
     
 
