--- a/page5.html
+++ b/page5.html
@@ -52,7 +52,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">responsive site templates</a></section><section class="header3 cid-rbdiFFcSJG mbr-parallax-background" id="header3-3j">
+<section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><section class="header3 cid-rbdiFFcSJG mbr-parallax-background" id="header3-3j">
 
     
 
@@ -86,7 +86,7 @@
         <div class="row justify-content-center content-row">
             <div class="media-container-column title col-12 col-lg-7 col-md-6">
                 <h3 class="mbr-section-subtitle align-left mbr-light pb-3 mbr-fonts-style display-5"><strong>Inscripción</strong></h3>
-                <h2 class="align-left mbr-bold mbr-fonts-style display-7"><span style="font-weight: normal;">Para participar, es necesario que completes el formulario de inscripción y realices tu pago de forma anticipada ya sea por medio de Paypal (Tarjetas de Crédito) o via Depósito/Transferencia Bancaria.</span><br><span style="font-weight: normal;"><br></span><span style="font-weight: normal;">Si te interesa participar pero no puedes cubrir el valor del curso, puedes solicitar una beca completando nuestro formulario de contacto debajo.</span><div><br></div></h2>
+                <h2 class="align-left mbr-bold mbr-fonts-style display-7"><span style="font-weight: normal;">Para participar, es necesario que completes el formulario de inscripción y realices tu pago de forma anticipada ya sea por medio de Paypal (Tarjetas de Crédito) o via Depósito/Transferencia Bancaria.</span><br><span style="font-weight: normal;"><br></span><span style="font-weight: normal;">Si te interesa participar pero no puedes cubrir el valor del curso, puedes solicitar una beca en el mismo<a href="https://docs.google.com/forms/d/e/1FAIpQLSdiBGkpKhOdEQ3T8PyD6dAGXUqPzNL4vD5SZTxLwOaX-GmIzg/viewform?usp=sf_link"> formulario de inscripción</a>. Ten en cuenta que las becas serán parciales y solo podremos disponer de las mismas una vez hallamos alcanzado el cupo mínimo del taller.</span><div><br></div></h2>
             </div>
             <div class="media-container-column col-12 col-lg-3 col-md-4">
                 <div class="mbr-section-btn align-right py-4"><a class="btn btn-primary display-4" href="https://docs.google.com/forms/d/e/1FAIpQLSdiBGkpKhOdEQ3T8PyD6dAGXUqPzNL4vD5SZTxLwOaX-GmIzg/viewform?usp=sf_link" target="_blank">INSCRIBETE AHORA</a></div>
@@ -207,7 +207,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Gracias por escribir!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="aebGuvaHXAYPf89qv3IpXBEgBeiE57VhtMLoPmSrziWLSVi4wK17qKjZaH9MuIu3/d/V+5oKtffTMq54rTKupkBs+gNCi/mQeQwKC3YbFQe8Mlu/hMeuoBwdwP742A4G">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="QzpoQTPEhTY4eqEYYaBGZv4nye1ke1G+okMJeRa2cYJ9u9Eh++R+BMNajv0fQtE3r72PvsJzQvbaH2UAfyNHPrsv9edxF3swp55gscqdfGcicPCo/ltzGR92r+JQ2Dmh">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
