--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><section class="header3 cid-r9pBPk0gXJ mbr-parallax-background" id="header3-30">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="header3 cid-r9pBPk0gXJ mbr-parallax-background" id="header3-30">
 
     
 
@@ -108,8 +108,7 @@
                         <a href="http://desaprenderonline.com/curso/"><img src="assets/images/frame-676x380.jpg" alt="Mobirise" title=""></a>
                     </div>
                     <div class="card-box">
-                        <h4 class="card-title mbr-fonts-style display-7"><strong>
-                            Curso Online Educación Alternativa</strong><br>Noviembre 2018</h4>
+                        <h4 class="card-title mbr-fonts-style display-7"><strong>Educación Alternativa en 8 Clases</strong><br>Curso Online</h4>
                         <p class="mbr-text mbr-fonts-style display-7">
                             El primer curso virtual en video sobre educación alternativa, realizado por el creador de La Educación Prohibida, con una perspectiva integral, crítica y transformadora.&nbsp;</p>
                     </div>
@@ -180,7 +179,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Gracias!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Mu8N8ImBFINaGxzMVx3f/ErTf+Y6W6XFsTU80ECNueGwVPIVPbUMXOkRxV9dStv4+4VtHuY/nJFB5IS2W8Hl0njUK9PnhKLghCCEA5F/oJdQvO5EmAk0MVDBzYzCxDjv">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="O49//z81xO6JmDLVYKK0uWXLoteUZ3u+J/tWxI/KEUngqWWpeyAt3afyCs693XLbCHD4mLBVcCLrOnqE5IoOnhzTgQ34fUsxyND4eG8XSKZi6+E9P7nq7aFavnj2zhJ+">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
