Actualización Curso Online a Whatsapp

--- a/curso/index.html
+++ b/curso/index.html
@@ -74,7 +74,7 @@ src="https://www.facebook.com/tr?id=927746117427355&ev=PageView
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section class="cid-r6cGhRHPLU" id="video2-1f">
+<section class="engine"><a href="https://mobirise.info/n">simple site templates</a></section><section class="cid-r6cGhRHPLU" id="video2-1f">
 
     
     
@@ -390,7 +390,7 @@ src="https://www.facebook.com/tr?id=927746117427355&ev=PageView
 </li><li class="list-group-item">8 clases en video, materiales y sesiones en vivo.</li>
                         </ul>
                     </div>
-                    <div class="mbr-section-btn text-center pt-4"><a href="https://docs.google.com/forms/d/e/1FAIpQLSeRlZPdes4xbETe3Zr5U_LSPvwd16VXnnrsNKGOp4CKqVLOfw/viewform?usp=sf_link" class="btn btn-primary display-4">INSCRIBIRME</a></div>
+                    <div class="mbr-section-btn text-center pt-4"><a href="mp.html#header5-1v" class="btn btn-primary display-4">INSCRIBIRME</a></div>
                 </div>
             </div>
 
@@ -410,7 +410,7 @@ src="https://www.facebook.com/tr?id=927746117427355&ev=PageView
 </li><li class="list-group-item">8 clases en video, materiales y sesiones en vivo.&nbsp;</li>
                         </ul>
                     </div>
-                    <div class="mbr-section-btn text-center pt-4"><a href="https://docs.google.com/forms/d/e/1FAIpQLSeRlZPdes4xbETe3Zr5U_LSPvwd16VXnnrsNKGOp4CKqVLOfw/viewform?usp=sf_link" class="btn btn-primary display-4">INSCRIBIRME</a></div>
+                    <div class="mbr-section-btn text-center pt-4"><a href="paypal.html#header5-1w" class="btn btn-primary display-4" target="_blank">INSCRIBIRME</a></div>
                 </div>
             </div>
 
