Actualizacion Evento Mexico 3

--- a/mexico-inscripcion.html
+++ b/mexico-inscripcion.html
@@ -52,7 +52,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">free web builder</a></section><section class="header3 cid-rbdiFFcSJG mbr-parallax-background" id="header3-3j">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap html templates</a></section><section class="header3 cid-rbdiFFcSJG mbr-parallax-background" id="header3-3j">
 
     
 
@@ -85,7 +85,7 @@
     <div class="container">
         <div class="row justify-content-center content-row">
             <div class="media-container-column title col-12 col-lg-7 col-md-6">
-                <h3 class="mbr-section-subtitle align-left mbr-light pb-3 mbr-fonts-style display-2"><strong>Paso 1</strong></h3>
+                <h3 class="mbr-section-subtitle align-left mbr-light pb-3 mbr-fonts-style display-5"><strong>Paso 1</strong></h3>
                 <h2 class="align-left mbr-bold mbr-fonts-style display-7"><div><span style="font-weight: normal;">Elige tu medio de pago según tu caso y realiza el pago.</span></div></h2>
             </div>
             <div class="media-container-column col-12 col-lg-3 col-md-4">
@@ -175,7 +175,7 @@
     <div class="container">
         <div class="row justify-content-center content-row">
             <div class="media-container-column title col-12 col-lg-7 col-md-6">
-                <h3 class="mbr-section-subtitle align-left mbr-light pb-3 mbr-fonts-style display-2"><strong>Paso 3</strong></h3>
+                <h3 class="mbr-section-subtitle align-left mbr-light pb-3 mbr-fonts-style display-5"><strong>Paso 3</strong></h3>
                 <h2 class="align-left mbr-bold mbr-fonts-style display-7"><span style="font-weight: normal;">Una vez recibida tu inscripción, recibirás una confirmación via Whatsapp de tu formulario. En caso de no recibirla puedes comunicarte con nosotros en el siguiente enlace.</span></h2>
             </div>
             <div class="media-container-column col-12 col-lg-3 col-md-4">
