--- a/mexico.html
+++ b/mexico.html
@@ -53,7 +53,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online site builder</a></section><section class="header3 cid-rbdbG9tMVC mbr-parallax-background" id="header3-32">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="header3 cid-rbdbG9tMVC mbr-parallax-background" id="header3-32">
 
     
 
@@ -71,7 +71,7 @@
                 <div class="mbr-section-text mbr-white pb-3 ">
                     <p class="mbr-text mbr-fonts-style display-5"><br><strong><br></strong><strong>19 y 20 de Marzo - Ciudad de México<br></strong>Coordinado por German Doin<br></p>
                 </div>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="page4.html#header3-32">SABER MÁS</a>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="mexico.html#content4-33">SABER MÁS</a>
                     <a class="btn btn-md btn-white-outline display-4" href="mexico-inscripcion.html#header3-3j" target="_blank">INSCRIBIRME</a></div>
             </div>
         </div>
