--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">free bootstrap themes</a></section><section class="header3 cid-rdSqKphtix mbr-parallax-background" id="header3-3n">
+<section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><section class="header3 cid-rdSqKphtix mbr-parallax-background" id="header3-3n">
 
     
 
@@ -139,7 +139,7 @@
                         <h4 class="card-title mbr-fonts-style display-7"><strong>Introducción a la Educación Alternativa</strong><br>19 y 20 de Marzo - México DF</h4>
                         <p class="mbr-text mbr-fonts-style display-7">Un taller intensivo de 2 jornadas que nos invita recorrer la diversidad de experiencias educativas alternativas, conociendo sus diferencias, matices, elementos comunes y contradicciones.</p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="page4.html" class="btn btn-primary display-4">
+                    <div class="mbr-section-btn text-center"><a href="mexico.html#menu1-31" class="btn btn-primary display-4">
                             MÁS INFORMACIÓN</a></div>
                 </div>
             </div>
