Cambio de Precios

--- a/curso/index.html
+++ b/curso/index.html
@@ -74,7 +74,7 @@ src="https://www.facebook.com/tr?id=927746117427355&ev=PageView
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">simple site templates</a></section><section class="cid-r6cGhRHPLU" id="video2-1f">
+<section class="engine"><a href="https://mobirise.info/o">free portfolio web templates</a></section><section class="cid-r6cGhRHPLU" id="video2-1f">
 
     
     
@@ -379,7 +379,7 @@ src="https://www.facebook.com/tr?id=927746117427355&ev=PageView
                             $
                         </span>
                         <span class="price-figure mbr-fonts-style display-1">
-                              5000</span>
+                              3800</span>
                         <small class="price-term mbr-fonts-style display-7">&nbsp;</small>
                     </div>
                 </div>
@@ -399,7 +399,7 @@ src="https://www.facebook.com/tr?id=927746117427355&ev=PageView
                     <h3 class="plan-title mbr-fonts-style display-5">Resto del Mundo</h3>
                     <div class="plan-price">
                         <span class="price-value mbr-fonts-style display-5">u$d&nbsp;</span>
-                        <span class="price-figure mbr-fonts-style display-1">200</span>
+                        <span class="price-figure mbr-fonts-style display-1">150</span>
                         <small class="price-term mbr-fonts-style display-7">&nbsp;</small>
                     </div>
                 </div>
@@ -428,7 +428,7 @@ src="https://www.facebook.com/tr?id=927746117427355&ev=PageView
                 <div class="plan-body pb-5">
                     <div class="plan-list align-center">
                         <ul class="list-group list-group-flush mbr-fonts-style display-7">
-                            <li class="list-group-item"><span style="font-size: 1.4rem;">Si quieres realizar el curso y necesitas una beca parcial, escríbenos via Whatsapp y cuéntanos tu situación para recibir una de las 10 medias becas mensuales que disponemos.</span></li>
+                            <li class="list-group-item"><span style="font-size: 1.4rem;">Si quieres realizar el curso y necesitas una beca parcial, escríbenos via Whatsapp y cuéntanos tu situación para recibir una de las 10 becas parciales que disponemos con un descuento de hasta un 30%.</span></li>
                         </ul>
                     </div>
                     <div class="mbr-section-btn text-center pt-4"><a href="https://wa.me/5491142970879?text=Hola!%20Me%20interesa%20aplicar%20a%20una%20beca%20parcial%20para%20el%20Curso%20Online" class="btn btn-primary display-4" target="_blank">APLICAR</a></div>
