--- a/mexico-inscripcion.html
+++ b/mexico-inscripcion.html
@@ -52,7 +52,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">how to build your own site</a></section><section class="header3 cid-rbdiFFcSJG mbr-parallax-background" id="header3-3j">
+<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="header3 cid-rbdiFFcSJG mbr-parallax-background" id="header3-3j">
 
     
 
@@ -115,9 +115,7 @@
                 </div>
                 <div class="plan-body pb-5">
                     <div class="plan-list align-center">
-                        <ul class="list-group list-group-flush mbr-fonts-style display-7">
-                            <li class="list-group-item">Estudiantes ORT México y Miembros de SOMECE</li>
-                        </ul>
+                        <ul class="list-group list-group-flush mbr-fonts-style display-7">&nbsp;</ul>
                     </div>
                     <div class="mbr-section-btn text-center pt-4"><a href="https://manager.pagofacil.net/tpvc/Index/ql/codigo/4ggciea44alopfli" class="btn btn-primary display-4" target="_blank">TARJETA</a> <a href="https://manager.pagofacil.net/tpvc/Index/ql/codigo/4ggccea44alopfoa" class="btn btn-primary display-4" target="_blank">EFECTIVO</a></div>
                 </div>
