Nuevo Precio Curso

--- a/curso/mp.html
+++ b/curso/mp.html
@@ -58,7 +58,7 @@ src="https://www.facebook.com/tr?id=927746117427355&ev=PageView
                 <p class="mbr-text align-center display-5 pb-3 mbr-fonts-style">Para acceder al curso debes realizar el pago y completar tu inscripción. 
 <br>El sistema de pagos Mercado Pago te ofrecerá diferentes modalidades de pago.
 <br>Una vez realizado el pago exitosamente el sitio te pedirá que completes un formulario de inscripción.&nbsp;</p>
-                <div class="mbr-section-btn align-center"><a class="btn btn-md btn-white display-4" href="https://www.mercadopago.com/mla/checkout/start?pref_id=50942394-a78184c2-bd2b-40f5-9190-d05eb02ac78c" target="_blank">PROCEDER A MERCADO PAGO</a>
+                <div class="mbr-section-btn align-center"><a class="btn btn-md btn-white display-4" href="https://www.mercadopago.com/mla/checkout/start?pref_id=50942394-a78184c2-bd2b-40f5-9190-d05eb02ac78c" target="_blank">IR A MERCADO PAGO</a>
                         <a class="btn btn-md btn-white-outline display-4" href="https://docs.google.com/forms/d/e/1FAIpQLSeRlZPdes4xbETe3Zr5U_LSPvwd16VXnnrsNKGOp4CKqVLOfw/viewform?usp=sf_link" target="_blank">FORMULARIO DE INSCRIPCIÓN</a></div>
             </div>
         </div>
@@ -67,7 +67,7 @@ src="https://www.facebook.com/tr?id=927746117427355&ev=PageView
     
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">simple site creator</a></section><section class="mbr-section info1 cid-ri7ohx3Vin" id="info1-1y">
+<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="mbr-section info1 cid-ri7ohx3Vin" id="info1-1y">
 
     
 
