--- a/curso/index.html
+++ b/curso/index.html
@@ -74,7 +74,7 @@ src="https://www.facebook.com/tr?id=927746117427355&ev=PageView
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">free portfolio web templates</a></section><section class="cid-r6cGhRHPLU" id="video2-1f">
+<section class="engine"><a href="https://mobirise.info/q">free responsive website templates</a></section><section class="cid-r6cGhRHPLU" id="video2-1f">
 
     
     
@@ -121,8 +121,8 @@ src="https://www.facebook.com/tr?id=927746117427355&ev=PageView
                     <span class="mbr-iconfont mbrib-users" style="color: rgb(35, 35, 35); fill: rgb(35, 35, 35);"></span>
                 </div>
                 <div class="card-box">
-                    <h4 class="card-title py-3 mbr-fonts-style display-5">Sesiones en Vivo</h4>
-                    <p class="mbr-text mbr-fonts-style display-7">Un espacio de intercambio en directo con German Doin para preguntas específicas sobre los temas abordados.</p>
+                    <h4 class="card-title py-3 mbr-fonts-style display-5">Conversaciones con Expertos</h4>
+                    <p class="mbr-text mbr-fonts-style display-7">Todos los meses compartiremos nuevos videos de conversaciones con especialistas de la educación alternativa.</p>
                 </div>
             </div>
 
@@ -378,8 +378,7 @@ src="https://www.facebook.com/tr?id=927746117427355&ev=PageView
                         <span class="price-value mbr-fonts-style display-5">
                             $
                         </span>
-                        <span class="price-figure mbr-fonts-style display-1">
-                              3800</span>
+                        <span class="price-figure mbr-fonts-style display-1">3000</span>
                         <small class="price-term mbr-fonts-style display-7">&nbsp;</small>
                     </div>
                 </div>
@@ -399,7 +398,7 @@ src="https://www.facebook.com/tr?id=927746117427355&ev=PageView
                     <h3 class="plan-title mbr-fonts-style display-5">Resto del Mundo</h3>
                     <div class="plan-price">
                         <span class="price-value mbr-fonts-style display-5">u$d&nbsp;</span>
-                        <span class="price-figure mbr-fonts-style display-1">150</span>
+                        <span class="price-figure mbr-fonts-style display-1">100</span>
                         <small class="price-term mbr-fonts-style display-7">&nbsp;</small>
                     </div>
                 </div>
