--- a/curso/paypal.html
+++ b/curso/paypal.html
@@ -57,7 +57,7 @@ src="https://www.facebook.com/tr?id=927746117427355&ev=PageView
                 <h1 class="mbr-section-title align-center pb-3 mbr-fonts-style display-1"><strong>¡Que alegría!</strong></h1>
                 <p class="mbr-text align-center display-5 pb-3 mbr-fonts-style">Para acceder al curso debes realizar el pago con tarjeta de crédito y completar tu inscripción. 
 <br>El sistema de pagos Paypal te pedirá que crees un usuario en un proceso muy sencillo.<br>Una vez realizado el pago exitosamente el sitio te dirigirá al formulario de inscripción.&nbsp;</p>
-                <div class="mbr-section-btn align-center"><a class="btn btn-md btn-white display-4" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=E4J4N9GC8XJ42" target="_blank">PROCEDER A PAYPAL</a>
+                <div class="mbr-section-btn align-center"><a class="btn btn-md btn-white display-4" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=E4J4N9GC8XJ42" target="_blank">IR A PAYPAL</a>
                         <a class="btn btn-md btn-white-outline display-4" href="https://docs.google.com/forms/d/e/1FAIpQLSeRlZPdes4xbETe3Zr5U_LSPvwd16VXnnrsNKGOp4CKqVLOfw/viewform?usp=sf_link" target="_blank">FORMULARIO DE INSCRIPCIÓN</a></div>
             </div>
         </div>
@@ -66,7 +66,7 @@ src="https://www.facebook.com/tr?id=927746117427355&ev=PageView
     
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">how to build a website for free</a></section><section class="mbr-section info1 cid-ri7oLpli5f" id="info1-1z">
+<section class="engine"><a href="https://mobirise.info/p">web templates free download</a></section><section class="mbr-section info1 cid-ri7oLpli5f" id="info1-1z">
 
     
 
