--- a/curso/mp.html
+++ b/curso/mp.html
@@ -67,7 +67,7 @@ src="https://www.facebook.com/tr?id=927746117427355&ev=PageView
     
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">amp template</a></section><section class="mbr-section info1 cid-ri7ohx3Vin" id="info1-1y">
+<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="mbr-section info1 cid-ri7ohx3Vin" id="info1-1y">
 
     
 
