--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">develop free website</a></section><section class="header3 cid-rdSqKphtix mbr-parallax-background" id="header3-3n">
+<section class="engine"><a href="https://mobirise.info/f">easy website maker</a></section><section class="header3 cid-rdSqKphtix mbr-parallax-background" id="header3-3n">
 
     
 
@@ -136,11 +136,11 @@
                         <img src="assets/images/grupo-1-676x332.png" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
-                        <h4 class="card-title mbr-fonts-style display-7"><strong>Claves para un aprendizaje integral</strong><br><br></h4>
+                        <h4 class="card-title mbr-fonts-style display-7"><strong>Ciclo Desaprender</strong><br>Buenos Aires</h4>
                         <p class="mbr-text mbr-fonts-style display-7">Un curso intensivo que nos invita recorrer la diversidad de experiencias educativas alternativas, conociendo sus diferencias, matices, elementos comunes y contradicciones.</p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="index.html" class="btn btn-primary-outline display-4">
-                            PROXIMAMENTE</a></div>
+                    <div class="mbr-section-btn text-center"><a href="taller-inscripcion.html" class="btn btn-primary display-4">
+                            MAS INFORMACIÓN</a></div>
                 </div>
             </div>
 
