--- a/taller.html
+++ b/taller.html
@@ -53,7 +53,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">free website maker</a></section><section class="header3 cid-rjW6AeZTAV mbr-parallax-background" id="header3-41">
+<section class="engine"><a href="https://mobirise.info/k">develop own website</a></section><section class="header3 cid-rjW6AeZTAV mbr-parallax-background" id="header3-41">
 
     
 
@@ -144,8 +144,8 @@
     
 
     <div class="container align-center">
-        <h2 class="mbr-section-title pb-3 mbr-fonts-style display-2">Primer Encuentro</h2>
-        <h3 class="mbr-section-subtitle pb-5 mbr-fonts-style display-5">En un primer encuentro de 3 horas abordaremos los siguientes contenidos:</h3>
+        <h2 class="mbr-section-title pb-3 mbr-fonts-style display-2">Contenidos</h2>
+        <h3 class="mbr-section-subtitle pb-5 mbr-fonts-style display-5">El ciclo se organiza en al menos 3 encuentros que abordan los siguientes temas:</h3>
 
         <div class="container timelines-container" mbri-timelines="">
             <div class="row timeline-element reverse separline">      
@@ -173,7 +173,7 @@
                 <div class="col-xs-12 col-md-6 align-left ">
                     <div class="timeline-text-content">
                         <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-2">Características Principales</h4>
-                        <p class="mbr-timeline-text mbr-fonts-style display-7">Elementos comunes en el campo de la didáctica, el currículum, la evaluación, el diseño de espacios y tiempo, las relaciones pedagógicas, los roles, el vínculo con la comunidad y el territorio, las formas de gobierno y sustentabilidad.<br><br>En los siguientes encuentros dedicaremos nuestro tiempo a algunos de estos ejes puntualmente para profundizar en las corrientes con mayor aporte en cada aspecto.</p>
+                        <p class="mbr-timeline-text mbr-fonts-style display-7">Elementos comunes en el campo de la didáctica, el currículum, la evaluación, el diseño de espacios y tiempo, las relaciones pedagógicas, los roles, el vínculo con la comunidad y el territorio, las formas de gobierno y sustentabilidad.<br></p>
                     </div>
                 </div>
             </div> 
@@ -188,8 +188,8 @@
                 <span class="iconBackground"></span>
                 <div class="col-xs-12 col-md-6 align-right">
                     <div class="timeline-text-content">
-                        <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-2">Primeras Dinámicas de Integración</h4>      
-                        <p class="mbr-timeline-text mbr-fonts-style display-7">Reflexiones fruto de la comparación entre las diferentes corrientes alternativas. Perspectivas críticas sobre sus fortalezas y desafíos. Elementos de análisis de la propia práctica para el diseño de una alternativa integral.<br><br>En los siguientes encuentros continuaremos abordando estas dinámicas con el objetivo de comprender la posibilidad de una experiencia educativa integral.</p>
+                        <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-2">Dinámicas de Integración</h4>      
+                        <p class="mbr-timeline-text mbr-fonts-style display-7">Reflexiones fruto de la comparación entre las diferentes corrientes alternativas. Perspectivas críticas sobre sus fortalezas y desafíos. Elementos de análisis de la propia práctica para el diseño de una alternativa integral.<br></p>
                     </div>
                 </div>
             </div>
