Actualización con Evania

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">website creation software</a></section><section class="header3 cid-rdSqKphtix mbr-parallax-background" id="header3-3n">
+<section class="engine"><a href="https://mobirise.info/o">portfolio web templates</a></section><section class="header3 cid-rdSqKphtix mbr-parallax-background" id="header3-3n">
 
     
 
@@ -122,11 +122,10 @@
                         <img src="assets/images/img-2949-676x451.jpg" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
-                        <h4 class="card-title mbr-fonts-style display-7"><strong>Taller Vivencial DesAprender</strong><br><br></h4>
-                        <p class="mbr-text mbr-fonts-style display-7">
-                            Un espacio de convivencia y encuentro hacia una búsqueda profunda al interior de nuestra propia educación. Desaprender es la instancia más intensa que proponemos desde nuestro equipo.&nbsp;</p>
+                        <h4 class="card-title mbr-fonts-style display-7"><strong>Formación Acompañamiento de la Infancia</strong><br>Escuela Aramí - Evania Reichert</h4>
+                        <p class="mbr-text mbr-fonts-style display-7">Desde La Educación Prohibida y Aramí queremos ofrecer 10 cupos especiales con descuento para educadores y personas que trabajan en el acompañamiento de la infancia.</p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="index.html" class="btn btn-primary-outline display-4">PROXIMAMENTE</a></div>
+                    <div class="mbr-section-btn text-center"><a href="formacion.html#header6-4h" class="btn btn-primary-outline display-4">APLICAR</a></div>
                 </div>
             </div>
 
