--- a/formacion.html
+++ b/formacion.html
@@ -52,7 +52,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="header6 cid-rt1zFkq1uU" id="header6-4h">
+<section class="engine"><a href="https://mobirise.info/h">how to create your own web page</a></section><section class="header6 cid-rt1zFkq1uU" id="header6-4h">
 
     
 
@@ -235,7 +235,7 @@ Psicologéa de los Eneatipos en Brasil. Es el autor de los libros «El arte de
     <div class="container align-center">
         <h2 class="mbr-section-title pb-3 mbr-fonts-style display-2">
             Agenda Formación 2019</h2>
-        
+        <h3 class="mbr-section-subtitle pb-5 mbr-fonts-style display-5">Todos los módulos serán días Viernes, Sábado y Domingo de 9 a 18hs.</h3>
 
         <div class="container timelines-container" mbri-timelines="">
             <div class="row timeline-element reverse separline">      
